# Public-repo

./: README.md
1_Pandas_Gender_Age_prediction_based_on_user_logs/: Pandas_Gender_Age_prediction_based_on_user_logs.ipynb  functions.py  readme.md
2_Spark_cossim_text/: readme.md
3_ALS_purchase_prediction/: readme.md
4_Spark_funk_SVD/: funk_SVD.md  readme.md
5_Graph_social_network_recommendation_model/: readme.md
ALS_purchase_prediction/: ALS purchase prediction.md  task.md
Graph_social_network/: Graph_social_network.md
Graph_social_network_recommendation_model/: Graph_social_network.md
KE_Internship/: 1_EDA.ipynb  2_model_pipeline.ipynb  3_final_step.ipynb  README.md  hF.py  requirements.txt
Liquid_level_detection/: Readme.md  Solution.ipynb
Local_mlflow_s3_gitlab/: .env.example  .gitignore  README.md  docker-compose.yaml
Local_mlflow_s3_gitlab/Docker/: .gitignore
ML_courses_projects/: README.md
ML_courses_projects/NPL_3_ALS_purchase_prediction/: ALS purchase prediction.ipynb
NLMK_cv_test/: README.md  pyproject.toml
NLMK_cv_test/Docker/: Dockerfile
NLMK_cv_test/app/: functions.py  inference.py
NLMK_cv_test/data/raw/: 6_2021-06-01_21-51-49_frame43.txt
Pandas_Gender_Age_prediction_based_on_user_logs/: Model_description.md  Pandas_Gender_Age_prediction_based_on_user_logs.md  functions.py
ROSAGRO_cv_test/: Readme.md
RTSP_cvlc_multistream/: 8554.asx  Dockerfile  Readme.md  main.py  requirements.txt
Spark_cossim_text/: Spark cossim text.ipynb  Spark cossim text.md
Spark_funk_SVD/: funk_SVD.md  task.md
(+14 files in other folders)
