[tool.poetry]
name = "nlmk_cv"
version = "0.1.0"
description = ""
authors = ["kit-kat <novikov.ms.in12@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
python-dotenv = "^0.20.0"
great-expectations = "^0.15.12"
onnxmltools = "^1.11.1"
onnxruntime = "^1.11.1"
onnx = "^1.12.0"
Pillow = "^9.2.0"
uvicorn = "^0.18.2"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"


[tool.poetry.dev-dependencies]
poethepoet = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

